--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hello GIT!</h1>
     
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam reiciendis tempora repellendus, omnis quidem corporis nemo, hic maxime unde accusamus aperiam nulla animi? Mollitia velit iusto corporis nam officiis molestiae?
+    </p>
 </body>
 </html>
